Expose startBlock / endBlock from contract

--- a/storefront/pages/about.mdx
+++ b/storefront/pages/about.mdx
@@ -30,6 +30,8 @@ drawFigure(keccak256(blockNumber), pricePerToken)
 The sale is limited to a period of time. After the end-block it will not be
 possible to mint more Lissajous NFTs.
 
+There are 8'388'608 possible parameter combinations.
+
 ## How much does it cost?
 
 The price starts at 0.01 ETH per NFT and increases 0.1% with every mint.
