--- a/storefront/pages/about.mdx
+++ b/storefront/pages/about.mdx
@@ -30,7 +30,8 @@ drawFigure(keccak256(blockNumber), pricePerToken)
 The sale is limited to a period of time. After the end-block it will not be
 possible to mint more Lissajous NFTs.
 
-There are 8'388'608 possible parameter combinations.
+There are 8'388'608 possible parameter combinations. But the experiment will
+only last 524'288 blocks.
 
 ## How much does it cost?
 
