--- a/storefront/pages/terms.mdx
+++ b/storefront/pages/terms.mdx
@@ -1,478 +1,3 @@
 # Terms and Conditions
 
-Hashmasks
-
-Terms of Use
-
-Last Updated: 27 January 2021
-
-These Terms of Use constitute a legally binding agreement made between the
-user (“you”), whether personally or on behalf of an entity and Suum Cuique
-Labs GmbH, domiciled in Zug, Switzerland (The Company”;“we") concerning
-your access to and use of the www.thehashmasks.com website and the
-smart-contract based Hashmasks application (“App” or “Application”) as
-well as any other media form, media channel, mobile website or mobile
-application, smart contracts related, linked, or otherwise connected
-thereto (the “website”, Site” and the “App”).
-
-Hashmasks is a digital art collectible built on top of the Ethereum
-network. The collection consists of 16 384 unique digital portraits (the
-“Hashmasks” or “Art”) that are hashed on the blockchain and are
-represented by a non-fungible token (“NFT”) each. In addition, each NFT
-accumulates a utility token (“NCT”), which serves only one purpose: To
-rename the NFT on Ethereum. There are no other functionalities of the NCT
-token. The Hashmasks smart contract allows participants to purchase the
-NFT representing the digital portraits from. The NCT utility token cannot
-be purchased, but it can be freely accumulated by holding the NFT. The
-only utility of the NCT token is to change the name of the NFT on the
-Ethereum blockchain. The Company does not provide or intend to provide a
-secondary market place for the NFT or NCT. Hashmasks will provide a user
-interface to visualize the digital art works. After the sale of an NCT to
-you, the ownership of the NFT, and to the connected Art, is transferred
-from the Ethereum smart contract to the purchaser and concludes the
-business transaction between both parties.
-
-The Company is selling the Art via the NFT and is making the Application
-available to you. Before you purchase an NFT and use the UI and the
-Ethereum smart contracts, however, you will need to agree to these Terms
-of Use and any terms and conditions incorporated herein by reference
-(collectively, these "Terms").
-
-PLEASE READ THESE TERMS CAREFULLY BEFORE MAKING A PURCHASE OF AN NFT
-AND/OR USING THE APP. THESE TERMS GOVERN YOUR PURCHASE of NFT AND USE OF
-THE APPLICATION, UNLESS THE COMPANY HAS EXECUTED A SEPARATE WRITTEN
-AGREEMENT WITH YOU FOR THAT PURPOSE. THE COMPANY IS ONLY WILLING TO MAKE
-THE NFT AND THE APP AVAILABLE TO YOU IF YOU ACCEPT ALL OF THESE TERMS. BY
-USING THE APPLICATION, OR ANY PART OF THEM, OR BY CLICKING “I ACCEPT”
-BELOW OR INDICATING YOUR ACCEPTANCE IN AN ADJOINING BOX, YOU ARE
-CONFIRMING THAT YOU FULLY UNDERSTAND AND AGREE TO BE BOUND BY ALL OF THESE
-TERMS. IF YOU ARE ACCEPTING THESE TERMS ON BEHALF OF A COMPANY OR OTHER
-LEGAL ENTITY, YOU REPRESENT THAT YOU HAVE THE LEGAL AUTHORITY TO ACCEPT
-THESE TERMS ON THAT ENTITY’S BEHALF, IN WHICH CASE “YOU” WILL MEAN THAT
-ENTITY. IF YOU DO NOT HAVE SUCH AUTHORITY, OR IF YOU DO NOT ACCEPT ALL OF
-THESE TERMS, THEN WE ARE UNWILLING TO MAKE THE APP, THE SMART CONTRACTS,
-OR THE SITE AVAILABLE TO YOU. IF YOU DO NOT AGREE TO THESE TERMS, YOU MAY
-NOT ACCESS OR USE THE APP, THE SMART CONTRACTS, OR THE SITE.
-
-## 1. THE HASHMASKS APP
-
-A. The Hashmasks App is a collection of 16 384 unique digital portraits
-(stored in .jpeg format on IPFS), each represented by a NFT. By holding a
-hashmask in your wallet, you accumulate the NCT for free, which allows you
-to change the name on the Ethereum blockchain.
-
-B. The hashmask NFTs are sold during an initial sales period of up to 2
-weeks (14 days) according to the price schedule displayed on the website
-(www.thehashmasks.com). All unsold masks during the initial sales period
-will remain purchasable after the initial sales period has concluded as
-the sale is encoded in the smart contract. The Company does not provide
-any additional services to the user after the business transaction is
-concluded.
-
-C. You can access the Appvia any web browser using the URL
-https://www.thehashmasks.com and an electronic Ethereum wallet compatible
-with the NFTstandard on the Ethereum network, such as the MetaMask wallet.
-You will not be able to engage in any transactions on the App other than
-through MetaMask, or other Ethereum-compatible browsers.
-
-D. Transactions on the App are managed and confirmed via the Ethereum
-blockchain. We neither own nor control MetaMask, Google Chrome, the
-Ethereum network, or any other third-party site, product, or service that
-you might access, visit, or use for the purpose of enabling you to use the
-various features of the App. We will not be liable for the acts or
-omissions of any such third parties, nor will we be liable for any damage
-that you may suffer as a result of your transactions or any other
-interaction with any such third parties.
-
-E. You are responsible for your MetaMask wallet (and other Ethereum
-wallets) and the private key to access it.
-
-F. The hashmasks are digital art works and serve no other purpose other
-than that of an art work. The Name Changing Token serves only one purpose:
-to change the name of your NFT on-chain.
-
-## 2. PAYMENT
-
-A. If you decide to purchase a Hashmask digital art portrait from the
-contract, any financial transactions will be conducted solely through the
-Ethereum network. We have no control over these payments or transactions,
-nor do we have the ability to reverse any transactions. With that in mind,
-the company will have no liability to you or to any third party for any
-claims or damages that may arise as a result of any transactions that you
-engage in via the App, or using the Smart Contracts, or any other
-transactions that you conduct via the Ethereum network.
-
-B. Ethereum requires the payment of a transaction fee (a “Gas Fee”) for
-every transaction that occurs on the Ethereum network. The Gas Fee funds
-the network of computers that run the decentralized Ethereum network. This
-means that you will need to pay a Gas Fee for each transaction that occurs
-via the App. The Gas Fee does not go to us and we have no control over its
-pricing.
-
-D. All paid prices exclude any possible duties or charges. You will be
-solely responsible to pay any and all sales, use, value-added and other
-taxes, duties, and assessments (except taxes on our net income) now or
-hereafter claimed or imposed by any governmental authority (collectively,
-“Taxes”) associated with your use of the App (including, without
-limitation, any Taxes that may become payable as the result of your
-ownership of a Hashmask. Except for income and net-wealth taxes levied on
-The Company , you: (i) will pay or reimburse us for all national, federal,
-state, local or other taxes and assessments of any jurisdiction, including
-value added taxes and taxes as required by international tax treaties,
-customs or other import or export taxes, and amounts levied in lieu
-thereof based on charges set, services performed or payments made
-hereunder, as are now or hereafter may be imposed under the authority of
-any national, state, local or any other taxing jurisdiction; and (ii)
-shall not be entitled to deduct the amount of any such taxes, duties or
-assessments from payments made to us pursuant to these Terms. You confirm
-that you are not a resident in Switzerland or the United States nor are
-you registered for Goods and services tax in Switzerland or the United
-States.
-
-## 3. OWNERSHIP AND RESTRICTIONS
-
-A. Ownership
-
-i. You Own the NFT. Each Hashmask is a NFT on the Ethereum blockchain.
-When you purchase a NFT, you own the underlying Hashmask, the Art,
-completely. Ownership of the NFT is mediated entirely by the Smart
-Contract and the Ethereum Network: at no point may we seize, freeze, or
-otherwise modify the ownership of any Hashmask. In addition, any NFT
-holder will be eligible to claim NCT tokens for free from the NCT
-Contract. The NCT tokens can then, and solely, be used to change the name
-of the NFT on the Ethereum Blockchain. We strictly prohibit the use of
-offensive language in the name giving process. Any insulting names will be
-removed from the User Interface. Since the smart contracts are open to
-anyone, we cannot hinder a name change on the Ethereum blockchain.
-
-ii. Personal Use. Subject to your continued compliance with these Terms,
-The Company grants you a worldwide, exclusive, royalty-free license to
-use, copy, and display the purchased Art, along with any extensions that
-you choose to create or use, solely for the following purposes: (i) for
-your own personal, non-commercial use; (ii) as part of a marketplace that
-permits the purchase and sale of your Hashmask / NFT, provided that the
-marketplace cryptographically verifies each Hashmask owner’s rights to
-display the Art for their Hashmasks to ensure that only the actual owner
-can display the Art; or (iii) as part of a third party website or
-application that permits the inclusion, involvement, or participation of
-your Hashmask, provided that the website/application cryptographically
-verifies each Hashmask owner’s rights to display the Art for their
-Hashmask to ensure that only the actual owner can display the Art, and
-provided that the Art is no longer visible once the owner of the Hashmask
-leaves the website/application.
-
-iii. Commercial Use. Subject to your continued compliance with these
-Terms, The Company grants you an unlimited, worldwide, exclusive, license
-to use, copy, and display the purchased Art for the purpose of creating
-derivative works based upon the Art (“Commercial Use”). Examples of such
-Commercial Use would e.g. be the use of the Art to produce and sell
-merchandise products (T-Shirts etc.) displaying copies of the Art. For the
-sake of clarity, nothing in this Section will be deemed to restrict you
-from (i) owning or operating a marketplace that permits the use and sale
-of Hashmasks generally, provided that the marketplace cryptographically
-verifies each Hashmask owner’s rights to display the Art for their
-Hashmasks to ensure that only the actual owner can display the Art; (ii)
-owning or operating a third party website or application that permits the
-inclusion, involvement, or participation of Hashmasks generally, provided
-that the third party website or application cryptographically verifies
-each Hashmask owner’s rights to display the Art for their Hashmask to
-ensure that only the actual owner can display the Art, and provided that
-the Art is no longer visible once the owner of the Purchased Hashmask
-leaves the website/application; or (iii) earning revenue from any of the
-foregoing.
-
-B. Restrictions.
-
-By using the App and/or purchasing NFT, you confirm to not be listed, or
-associated with any person or entity being listed, on any of the US
-Department of Commerce’s Denied Persons or Entity List, the US Department
-of Treasury’s Specially Designated Nationals or Blocked Persons Lists, the
-US Department of State’s Debarred Parties List, the EU Consolidated List
-of Persons, Groups and Entities Subject to EU Financial Sanctions, or the
-Swiss SECO’s Overall List of Sanctioned Individuals, Entities and
-Organizations. You further confirm not to be resident of, citizen of or
-located in a geographic area that is subject to UN-, US-, EU-, Swiss
-embargoes. You further confirm not to be resident in Switzerland or the
-United States.
-
-You further confirm not to be resident of, citizen of or located in a
-geographic area that is subject to UN-, US-, EU-, Swiss embargoes.You
-confirm not to be resident in Switzerland or the United States. You
-confirm to not be domiciled in or organized under the laws of any country,
-whose legislation conflicts with the present purchase of NFTs on the
-Etherum blockchain or the purpose of The Company in general. You agree
-that you may not, nor permit any third party to do or attempt to do any of
-the foregoing without The Company ’s express prior written consent in each
-case: (ii) use the Art for your Purchased Hashmask to advertise, market,
-or sell any third party product or service; (ii) use the Art for your
-Purchased Hashmask in connection with images, videos, or other forms of
-media that depict hatred, intolerance, violence, cruelty, or anything else
-that could reasonably be found to constitute hate speech or otherwise
-infringe upon the rights of others; (iii) sell, distribute for commercial
-gain (including, without limitation, giving away in the hopes of eventual
-commercial gain), or otherwise commercialize merchandise that includes,
-contains, or consists of the Art for your Purchased Hashmask, except as
-expressly permitted in these Terms; (iv) attempt to trademark, copyright,
-or otherwise acquire additional intellectual property rights in or to the
-Art for your Purchased Hashmask; or (e.g., licensed intellectual property
-from a celebrity, athlete, or other public figure), you understand and
-agree as follows: (v) that you will not have the right to use such Third
-Party IP in any way except as incorporated in the Art, and subject to the
-license and restrictions contained herein; (x) that the Commercial Use
-license in Section 3.C(ii) above will not apply; (y) that, depending on
-the nature of the license granted from the owner of the Third Party IP,
-The Company may need to pass through additional restrictions on your
-ability to use the Art; and (z) to the extent that The Company informs you
-of such additional restrictions in writing (email is permissible), you
-will be responsible for complying with all such restrictions from the date
-that you receive the notice, and that failure to do so will be deemed a
-breach of this license. The restrictions in this Section will survive the
-expiration or termination of these Terms.
-
-## 4. TERMINATION
-
-In the event of any Force Majeure Event (including a pandemic), breach of
-these Terms, or any other event that would make provision of the App or
-the Sitecommercially unreasonable for Company, we may, in our discretion
-and without liability to you, with or without prior notice, suspend your
-access to all or a portion of the App or the Site.
-
-We may terminate your access to the App or the Site as far as technically
-feasible in our sole discretion, immediately and without prior notice, and
-delete or deactivate your Account and all related information and files in
-such account without liability to you, including, for instance, in the
-event that you breach any term of these Terms.
-
-## 5. ASSUMPTION OF RISK
-
-You accept and acknowledge each of the following:
-
-A. There are risks associated with using cryptocurrencies, including, but
-not limited to, the risk of hardware, software and Internet connections,
-the risk of malicious software introduction, and the risk that third
-parties may obtain unauthorized access to information stored within your
-wallet. You accept and acknowledge that The Company will not be
-responsible for any communication failures, disruptions, errors,
-distortions or delays you may experience when using the Ethereum network,
-however caused.
-
-B. You are solely responsible for determining what, if any, Taxes apply to
-your Hashmasks-related transactions. The Company is not responsible for
-determining the Taxes that apply to your transactions on the App, the
-Site, or the Smart Contracts.
-
-C. The App does not store, send, or receive Hashmasks. This is because
-Hashmasks exist only by virtue of the ownership record maintained on the
-App’s supporting blockchain in the Ethereum network. Any transfer of
-Hashmasks occurs within the supporting blockchain in the Ethereum network,
-and not on the App.
-
-D. The prices of blockchain assets are very volatile. Fluctuations in the
-price of other digital assets could materially and adversely affect the
-value of your Hashmasks, which may also be subject to significant price
-volatility. We cannot guarantee that any purchasers of Hashmasks will not
-lose money.
-
-E. Risk of loss of private key or passphrase(s): The company is not
-responsible for your private keys, which you need in order to access the
-NFTs. It is your sole responsibility to protect your private keys. In case
-of lost, the company takes no responsibility.
-
-F. The regulatory regime governing blockchain technologies,
-cryptocurrencies, and tokens is uncertain, and new regulations or policies
-may materially adversely affect the development of the Hashmasks
-ecosystem, and therefore the potential utility or value of Hashmasks.
-
-G. Upgrades by Ethereum to the Ethereum platform, a hard fork in the
-Ethereum platform, or a change in how transactions are confirmed on the
-Ethereum platform may have unintended, adverse effects on all blockchains
-using the ERC-721 standard, including the Hashmasks ecosystem.
-
-## 6. LIMITATION OF WARRANTY, LIABILITY AND DISCLAIMERS
-
-EXCEPT AS EXPRESSLY STATED IN THESE TERMS, THE COMPANY DOES NOT MAKE ANY
-REPRESENTATIONS OR WARRANTIES AND EXPLICITLY DISCLAIMS ALL OTHER
-REPRESENTATIONS AND WARRANTIES, WHETHER EX-PRESS, IMPLIED, WRITTEN, ORAL
-OR STATUTORY, INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
-FITNESS FOR A PARTICULAR PURPOSE, AND WARRANTIES OTHERWISE ARISING FROM A
-COURSE OF DEALING, COURSE OF PERFORMANCE OR USAGE OF TRADE.
-
-To the fullest extent permitted by applicable law: (i) in no event will
-the company or any of the subsidiaries, affiliates, directors and
-licensors be liable for any damages, whether direct, indirect, special,
-incidental, or consequential, of any kind (including, but not limited to,
-where related to loss of revenue, income or profits, loss of use or data,
-or damages for business interruption) arising out of or in any way related
-to the sale or use of the NFT the App, the Site or otherwise related to
-these Terms, regardless of the form of action, whether based in contract,
-tort (including, but not limited to, simple negligence, whether active,
-passive or imputed), or any other legal or equitable theory (even if the
-party has been advised of the possibility of such damages and regardless
-of whether such damages were foreseeable.
-
-A. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR ACCESS TO AND USE OF THE
-APP IS AT YOUR SOLE RISK, AND THAT THE APP IS PROVIDED "AS IS" AND "AS
-AVAILABLE" WITHOUT WARRANTIES OF ANY KIND, WHETHER EXPRESSED OR IMPLIED.
-TO THE FULLEST EXTENT PERMISSIBLE PURSUANT TO APPLICABLE LAW, WE, OUR
-SUBSIDIARIES, AFFILIATES, AND LICENSORS MAKE NO EXPRESS WARRANTIES AND
-HEREBY DISCLAIM ALL IMPLIED WARRANTIES REGARDING THE APP AND ANY PART OF
-IT (INCLUDING, WITHOUT LIMITATION, THE SITE, ANY SMART CONTRACT, OR ANY
-EXTERNAL WEBSITES), INCLUDING THE IMPLIED WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE, NON-INFRINGEMENT, CORRECTNESS, ACCURACY,
-OR RELIABILITY. WITHOUT LIMITING THE GENERALITY OF THE FOREGOING, WE, OUR
-SUBSIDIARIES, AFFILIATES, AND LICENSORS DO NOT REPRESENT OR WARRANT TO YOU
-THAT: (I) YOUR ACCESS TO OR USE OF THE APP WILL MEET YOUR REQUIREMENTS,
-(II) YOUR ACCESS TO OR USE OF THE APP WILL BE UNINTERRUPTED, TIMELY,
-SECURE OR FREE FROM ERROR, (III) USAGE DATA PROVIDED THROUGH THE APP WILL
-BE ACCURATE, (III) THE APP OR ANY CONTENT, SERVICES, OR FEATURES MADE
-AVAILABLE ON OR THROUGH THE APP ARE FREE OF VIRUSES OR OTHER HARMFUL
-COMPONENTS, OR (IV) THAT ANY DATA THAT YOU DISCLOSE WHEN YOU USE THE APP
-WILL BE SECURE. SOME JURISDICTIONS DO NOT ALLOW THE EXCLUSION OF IMPLIED
-WARRANTIES IN CONTRACTS WITH CONSUMERS, SO SOME OR ALL OF THE ABOVE
-EXCLUSIONS MAY NOT APPLY TO YOU.
-
-B. YOU ACCEPT THE INHERENT SECURITY RISKS OF PROVIDING INFORMATION AND
-DEALING ONLINE OVER THE INTERNET, AND AGREE THAT WE HAVE NO LIABILITY OR
-RESPONSIBILITY FOR ANY BREACH OF SECURITY UNLESS IT IS DUE TO OUR WILFUL
-INTENT OR GROSS NEGLIGENCE.
-
-C. WE WILL NOT BE RESPONSIBLE OR LIABLE TO YOU FOR ANY LOSSES YOU INCUR AS
-THE RESULT OF YOUR USE OF THE ETHEREUM NETWORK OR THE METAMASK WALLET,
-INCLUDING BUT NOT LIMITED TO ANY LOSSES, DAMAGES OR CLAIMS ARISING FROM:
-(i) USER ERROR, SUCH AS FORGOTTEN PASSWORDS OR INCORRECTLY CONSTRUED SMART
-CONTRACTS OR OTHER TRANSACTIONS; (ii) SERVER FAILURE OR DATA LOSS; (iii)
-CORRUPTED WALLET FILES; OR (iv) UNAUTHORIZED ACCESS OR ACTIVITIES BY THIRD
-PARTIES, INCLUDING BUT NOT LIMITED TO THE USE OF VIRUSES, PHISHING,
-BRUTEFORCING OR OTHER MEANS OF ATTACK AGAINST THE APP, ETHEREUM NETWORK,
-OR THE METAMASK ELECTRONIC WALLET.
-
-D. HASHMASKS ARE INTANGIBLE DIGITAL OBJECTS THAT EXIST ONLY BY VIRTUE OF
-THE OWNERSHIP RECORD MAINTAINED IN THE ETHEREUM NETWORK. ALL SMART
-CONTRACTS ARE CONDUCTED AND OCCUR ON THE DECENTRALIZED LEDGER WITHIN THE
-ETHEREUM PLATFORM. WE HAVE NO CONTROL OVER AND MAKE NO GUARANTEES OR
-PROMISES WITH RESPECT TO SMART CONTRACTS.
-
-E. THE COMPANY IS NOT RESPONSIBLE FOR LOSSES DUE TO BLOCKCHAINS OR ANY
-OTHER FEATURES OF THE ETHEREUM NETWORK OR THE METAMASK ELECTRONIC WALLET,
-INCLUDING BUT NOT LIMITED TO LATE REPORT BY DEVELOPERS OR REPRESENTATIVES
-(OR NO REPORT AT ALL) OF ANY ISSUES WITH THE BLOCKCHAIN SUPPORTING THE
-ETHEREUM NETWORK, INCLUDING FORKS, TECHNICAL NODE ISSUES, OR ANY OTHER
-ISSUES HAVING FUND LOSSES AS A RESULT.
-
-## 7. INDEMNIFICATION
-
-You agree that you will be responsible for your use of the App or the Site
-and holding NFT or NCTand you agree to defend, indemnify, and hold
-harmless The Company and its officers, directors, employees, consultants,
-affiliates, subsidiaries and agents (collectively, the “The Company
-Entities”) from and against any and all claims, liabilities, damages,
-losses, and expenses, including reasonable attorneys’ fees and costs,
-arising out of or in any way connected with (i) your access to, use of, or
-alleged use of the App, site or token at any time; (ii) your violation of
-these Terms or any representation, warranty, or agreements referenced
-herein, or any applicable law or regulation; (iii) your violation of any
-third-party right, including without limitation any intellectual property
-right, publicity, confidentiality, property or privacy right; or (iv) any
-disputes or issues between you and any third party. The Company reserves
-the right, at our own expense, to assume the exclusive defense and control
-of any matter otherwise subject to indemnification by you (and without
-limiting your indemnification obligations with respect to such matter),
-and in such case, you agree to cooperate with The Company’s defense of
-such claim.
-
-## 8. THIRD-PARTY SITES
-
-The App may include hyperlinks to other web sites or resources
-(collectively, “External Sites”), which are provided solely as a
-convenience to our users. We have no control over any External Sites, are
-not monitoring their content and are providing the respective links for
-informational purposes only. You acknowledge and agree that we are not
-responsible for the availability of any External Sites, and that we do not
-endorse any advertising, products or other content or materials on or made
-available from any External Sites. Furthermore, you acknowledge and agree
-that we are not liable for any loss or damage which may be incurred as a
-result of the availability or unavailability of the External Sites, or as
-a result of any reliance placed by you upon the completeness, accuracy or
-existence of any advertising, products or other content or materials on,
-or made available from, any External Sites.
-
-## 9. CHANGES TO THE TERMS
-
-The present Terms may change from time to time, including but not limited
-to cases of changes in our App or Site and for any other case that the
-company deems as appropriate to improve the user experience.
-
-## 10. CHILDREN
-
-You affirm that you are over the age of 13, as the App is not intended for
-children under 13. IF YOU ARE 13 OR OLDER BUT UNDER THE AGE OF 18, OR THE
-LEGAL AGE OF MAJORITY WHERE YOU RESIDE IF THAT JURISDICTION HAS AN OLDER
-AGE OF MAJORITY, THEN YOU AGREE TO REVIEW THESE TERMS WITH YOUR PARENT OR
-GUARDIAN TO MAKE SURE THAT BOTH YOU AND YOUR PARENT OR GUARDIAN UNDERSTAND
-AND AGREE TO THESE TERMS. YOU AGREE TO HAVE YOUR PARENT OR GUARDIAN REVIEW
-AND ACCEPT THESE TERMS ON YOUR BEHALF. IF YOU ARE A PARENT OR GUARDIAN
-AGREEING TO THE TERMS FOR THE BENEFIT OF A CHILD OVER 13, THEN YOU AGREE
-TO AND ACCEPT FULL RESPONSIBILITY FOR THAT CHILD'S USE OF THE APP,
-INCLUDING ALL FINANCIAL CHARGES AND LEGAL LIABILITY THAT HE OR SHE MAY
-INCUR.
-
-## 11. WAIVER OF CLASS LAWSUITES
-
-ALL CLAIMS AND DISPUTES WITHIN THE SCOPE OF THESE TERMS MUST BE LITIGATED
-ON AN INDIVIDUAL BASIS AND NOT ON A CLASS OR COLLECTIVE BASIS, ONLY
-INDIVIDUAL RELIEF IS AVAILABLE, AND CLAIMS OF MORE THAN ONE CUSTOMER OR
-USER CANNOT BE CONSOLIDATED WITH THOSE OF ANY OTHER CUSTOMER OR USER.
-
-## 12. PRIVACY POLICY
-
-Our Privacy Policy describes the ways we collect, use, store and disclose
-your personal information, and is hereby incorporated by this reference
-into these Terms. You agree to the collection, use, storage, and
-disclosure of your data in accordance with our Privacy Policy.
-
-## 13. GENERAL
-
-If a provision of these terms is unenforceable as written, but could be
-changed to make it enforceable, that provision should be modified to the
-minimum extent necessary to make it enforceable. Otherwise, that provision
-should be removed.
-
-You may not assign your agreement with the company. The company may assign
-your agreement to any affiliate of the company, any other company that
-obtains control of the company, or any other company that buys assets of
-the company related to the forum. Any attempted assignment against these
-terms has no legal effect.
-
-Neither the exercise of any right under this Agreement, nor waiver of any
-breach of this Agreement, waives any other breach of this Agreement.
-
-## 14. GOVERNING LAW AND JURISDICTION
-
-These Terms and all claims relating to or arising out of this Agreement,
-or the breach thereof, whether in contract, tort or otherwise, shall be
-governed by Swiss Law, excluding Swiss choice-of-law principles.
-
-Any dispute, controversy or claim arising out of, or in relation to, this
-Agreement, including the validity, invalidity, breach, or termination
-thereof, shall be resolved by the cantonal court of the canton of Zug,
-Switzerland.
-
-## 15. MISCELLANEOUS
-
-These Terms and any policies or operating rules posted by us on the Site,
-the App or in respect to the Site or the Application constitute the entire
-agreement and understanding between you and the Company. Our failure to
-exercise or enforce any right or provision of these Terms shall not
-operate as a waiver of such right or provision. These Terms operate to the
-fullest extent permissible by law. We shall not be responsible or liable
-for any loss, damage, delay, or failure to act caused by any cause beyond
-our reasonable control. If any provision or part of a provision of these
-Terms is determined to be unlawful, void, and unenforceable, that
-provision or part of the provision is deemed severable these Terms and
-does not affect the validity and enforceability of any remaining
-provisions. There is no joint venture, partnership, employment or agency
-relationship created between you and us as a result of these Terms or use
-of the Site. You agree that these Terms will not be construed against us
-by virtue of having drafted them. You hereby waive any and all defenses
-you may have based on the electronic form of these Terms of Use and the
-lack of signing by the parties hereto to execute these Terms.
+Coming soon
