--- a/storefront/pages/terms.mdx
+++ b/storefront/pages/terms.mdx
@@ -1,3 +1,90 @@
-# Terms and Conditions
+# Terms and Conditions.
 
-Coming soon
+## Lissajous NFT
+
+The Lissajous NFT project (hereafter Lissajous NFT) is a decentralized software
+system on the Ethereum network. This website (hereafter lissajous.art) is only
+an interface built to help users interact with the Ethereum smart contract of
+the Lissajous (hereafter the Lissajous Smart Contract).
+
+## Ownership, Transactions and Security
+
+You are purchasing a unique token with a unique token identifier or Token ID.
+When you purchase a figure on Lissajous (hereafter a Lissajous-Figure) you own
+the Non-Fungible Token (hereafter NFT) on the Ethereum blockchain corresponding
+to that particular mint-block and token price within the Lissajous universe,
+namely the NFT of the purchased Lissajous-Figure. However, you do not own the
+purchased figure or any rights of, or associated with it outside the Lissajous
+universe, namely outside the Lissajous Smart Contract context. Ownership of the
+NFT is mediated entirely by the Lissajous Smart Contract and the Ethereum
+Network: at no point may Lissajous seize, freeze, or otherwise modify the
+ownership of any Lissajous-Figure tokens.
+
+Users are entirely responsible for the safety and management of their own
+private keys and Ethereum wallets, and for verifying all transactions generated
+by the website lissajous.art before approving those transactions. Use of
+lissajous.art is at the user’s own risk and Unchained Commerce GmbH is not
+liable for any incorrect or failed transactions, nor for the gas costs incurred.
+Furthermore, as the Lissajous smart contract runs on the Ethereum network,
+Unchained Commerce GmbH has no power to undo, reverse, or restore any
+transactions. By using lissajous.art, and any related tools it may provide, you
+agree to hold Lissajous harmless for any and all problems, errors, and failures
+no matter the cause or source of those errors and accept sole responsibility for
+all transactions.
+
+## Tax
+
+All paid prices exclude any possible duties and charges. You will be solely
+responsible to pay any and all sales, use, value-added and other taxes, duties
+and assessments claimed or imposed by your or any governmental authority.
+
+## Prohibited Countries
+
+By purchasing a Lissajous-Figure token from the Lissajous Smart Contract you
+confirm that you are not a citizen or resident of the United States of America,
+Switzerland nor a resident of a geographic area that is subject to UN-, US-, EU-
+or Swiss sanctions or embargoes, including: Afghanistan, Albania, Belarus,
+Bosnia & Herzegovina, Burundi, Central African Republic, Cote d’Ivoire, Cuba,
+Democratic Republic of the Congo, Ethiopia, Guinea, Guinea-Bissau, Iran, Iraq,
+Lebanon, Liberia, Libya, Myanmar (Burma), North Korea, Republic of Macedonia
+(FYROM), Serbia, Somalia, South Sudan, Sri Lanka, Sudan, Syria, Thailand,
+Trinidad & Tobago, Tunisia, Ugand Uganda, Ukraine, Venezuela, Yemen, and
+Zimbabwe. By entering or using the website, you accept you represent and warrant
+that you are not resident in those countries.
+
+## Disclaimer
+
+The information contained on this website is not intended for individuals or
+entities who are ordinarily resident in the United States of America,
+Switzerland nor for residents of a geographic area that is subject to UN-, US-,
+EU- or Swiss sanctions or embargoes, including: Afghanistan, Albania, Belarus,
+Bosnia & Herzegovina, Burundi, Central African Republic, Cote d’Ivoire, Cuba,
+Democratic Republic of the Congo, Ethiopia, Guinea, Guinea-Bissau, Iran, Iraq,
+Lebanon, Liberia, Libya, Myanmar (Burma), North Korea, Republic of Macedonia
+(FYROM), Serbia, Somalia, South Sudan, Sri Lanka, Sudan, Syria, Thailand,
+Trinidad & Tobago, Tunisia, Uganda, Ukraine, Venezuela, Yemen, and Zimbabwe. By
+entering or using the website, you accept you represent and warrant that you are
+not resident in those countries. The project team behind Lissajous, Unchained
+Commcere GmbH, reserves the right to restrict the sale of the NFT token through
+Lissajous.io in any jurisdiction or to any individuals or entities at its
+discretion. Lissajous provides the website and its connected services “as is”
+and “as available,” without warranty of any kind. Without limiting this, we
+expressly disclaim all warranties, whether expressed, implied or statutory,
+regarding the website. Using applications on the blockchain is associated with a
+high degree of technological and/or other risks. Holders and/or purchasers of
+the NFT-Tokens and associated content and artwork are subject to the Terms and
+Conditions available on this website. The NFT-Tokens are non-fungible tokens
+representing ownership of digital content/artwork only. Accordingly, no
+information on this website (or any other documents mentioned therein) is or may
+be considered to be advice or an invitation to enter into an agreement for any
+investment purpose. Further, as NFT-Tokens represent content/artwork, nothing on
+this website qualifies, or is intended to be an offering of securities in any
+jurisdiction, nor does it constitute an offer or an invitation to purchase
+shares, securities or any other financial products. Due to the artistic and
+experimental nature of this project, neither this document nor the NFT-Tokens
+have been registered with, or approved by any regulator in any jurisdiction. It
+remains the purchaser’s sole responsibility to assure that the purchase of the
+NFT-Tokens and the associated art is in compliance with laws and regulations in
+your jurisdiction. Lissajous undertakes no obligation to publicly update or
+revise any information or opinions published on the website. Lissajous reserves
+the right to amend the information at any time without prior notice.
